--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -142,7 +142,11 @@
               </div>
 
                 <div *ngFor="let g of goals" class="padding-top">
-                  <app-meta (mostraModalAdicionarMeta)="adicionarEmMeta($event)" [metaExcluida]="atualizarMetas()" [goal]="g"></app-meta>
+                  <app-meta
+                  (mostraModalAdicionarMeta)="adicionarEmMeta($event)"
+                  (mostraModalRetirarMeta)="removerDeMeta($event)"
+                  (mostraModalAttMeta)="attualizaMeta($event)"
+                  (metaExcluida)="atualizarMetas()" [goal]="g"></app-meta>
                 </div>
 
                 <div *ngIf="goals.length < 1">
@@ -168,7 +172,7 @@
 
             </div>
 
-            <p-dialog  [(visible)]="modalCriarMeta" [breakpoints]="{'960px': '75vw', '640px': '100vw'}" [style]="{width: '50vw'}" [modal]="true">
+            <p-dialog  [(visible)]="modalCriarMeta" [breakpoints]="{'960px': '75vw', '640px': '100vw'}" [style]="{width: '50vw'}" [modal]="true" (onHide)="finishAtualizarMeta()">
               <ng-template pTemplate="header">
                 <label>Criar meta</label>
               </ng-template>
@@ -209,7 +213,7 @@
 
             </p-dialog>
 
-            <p-dialog  [(visible)]="modalAdicionameta" [breakpoints]="{'960px': '75vw', '640px': '100vw'}" [style]="{width: '50vw'}" [modal]="true">
+            <p-dialog  [(visible)]="modalAdicionameta" [breakpoints]="{'960px': '75vw', '640px': '100vw'}" [style]="{width: '50vw'}" [modal]="true" (onHide)="finishAtualizarMeta()">
               <ng-template pTemplate="header">
                 <label>Atualizar meta</label>
               </ng-template>
@@ -234,6 +238,80 @@
 
                 <div class="col-12 p-fluid padding-top" *ngIf="mensagemMetaAtualizada">
                   <button pButton type="button" class="p-button-secondary p-button-rounded w-100" label="Sair" [disabled]="formAtualizarMeta.invalid" (click)="finishAtualizarMeta()"></button>
+                </div>
+
+                </div>
+
+              </form>
+
+            </p-dialog>
+
+            <p-dialog  [(visible)]="modalRetirarDeMeta" [breakpoints]="{'960px': '75vw', '640px': '100vw'}" [style]="{width: '50vw'}" [modal]="true" (onHide)="finishAtualizarMeta()">
+              <ng-template pTemplate="header">
+                <label>Atualizar meta</label>
+              </ng-template>
+
+              <form autocomplete="false" #formRetirarMeta="ngForm">
+                <ap-mensagem-erro [mensagem]="mensagemError"></ap-mensagem-erro>
+
+                <div class="grid padding-top">
+                  <p *ngIf="mensagemMetaAtualizada" style="color: green;">{{mensagemMetaAtualizada}}</p>
+
+                  <div class="col-12 p-fluid">
+                    <label for="valorAdicionadoInput">Valor a ser retirado</label>
+
+                    <p-inputNumber mode="currency" [min]="1" placeholder="0,00" [minFractionDigits]="2" locale="pt-BR" currency="BRL" ngModel name="valor" #valor="ngModel" [required]="true" [(ngModel)]="valorAddMeta" (focus)="mensagemError = null" [disabled]="!!mensagemMetaAtualizada"></p-inputNumber>
+
+                    <app-message [control]="valor.control" error="required" text="Informe o valor"></app-message>
+                 </div>
+
+                 <div class="col-12 p-fluid padding-top" *ngIf="!mensagemMetaAtualizada">
+                  <button pButton type="button" class="p-button-success p-button-rounded w-100" label="Concluir" [disabled]="formRetirarMeta.invalid" (click)="retirarMeta()"></button>
+                </div>
+
+                <div class="col-12 p-fluid padding-top" *ngIf="mensagemMetaAtualizada">
+                  <button pButton type="button" class="p-button-secondary p-button-rounded w-100" label="Sair" [disabled]="formRetirarMeta.invalid" (click)="finishAtualizarMeta()"></button>
+                </div>
+
+                </div>
+
+              </form>
+
+            </p-dialog>
+
+            <p-dialog  [(visible)]="modalAttMeta" [breakpoints]="{'960px': '75vw', '640px': '100vw'}" [style]="{width: '50vw'}" [modal]="true" (onHide)="finishAtualizarMeta()">
+              <ng-template pTemplate="header">
+                <label>Atualizar meta</label>
+              </ng-template>
+
+              <form autocomplete="false" #formAttMeta="ngForm">
+                <ap-mensagem-erro [mensagem]="mensagemError"></ap-mensagem-erro>
+
+                <div class="grid padding-top">
+                  <p *ngIf="mensagemMetaAtualizada" style="color: green;">{{mensagemMetaAtualizada}}</p>
+
+                  <div class="col-12 p-fluid">
+                    <div class="col-12 p-fluid">
+                      <label for="nomeMetaInput">Nome</label>
+                      <input pInputText id="nomeMetaInput" ngModel #nomeMetaInput="ngModel" class="form-control"  name="nomeMetaInput" disabled [(ngModel)]="nomeMeta" (focus)="mensagemError = null">
+
+                    </div>
+
+                   <div class="col-12 p-fluid">
+                    <label>Valor</label>
+                    <p-inputNumber mode="currency" [min]="1" placeholder="0,00" [minFractionDigits]="2" locale="pt-BR" currency="BRL" ngModel name="valor" #valor="ngModel" [required]="true" [(ngModel)]="valorAddMeta" (focus)="mensagemError = null" [disabled]="!!mensagemMetaAtualizada"></p-inputNumber>
+
+                    <app-message [control]="valor.control" error="required" text="Informe o valor"></app-message>
+
+                  </div>
+                 </div>
+
+                 <div class="col-12 p-fluid padding-top" *ngIf="!mensagemMetaAtualizada">
+                  <button pButton type="button" class="p-button-success p-button-rounded w-100" label="Concluir" [disabled]="formAttMeta.invalid" (click)="attMeta()"></button>
+                </div>
+
+                <div class="col-12 p-fluid padding-top" *ngIf="mensagemMetaAtualizada">
+                  <button pButton type="button" class="p-button-secondary p-button-rounded w-100" label="Sair" [disabled]="formAttMeta.invalid" (click)="finishAtualizarMeta()"></button>
                 </div>
 
                 </div>
