--- a/src/app/share/meta/meta.component.html
+++ b/src/app/share/meta/meta.component.html
@@ -28,18 +28,18 @@
             <button pButton pRipple type="button" icon="pi pi-arrow-circle-down"  class="p-button-rounded p-button-secondary" (click)="mostraModal()"></button>
             <label style="font-size: 11px;">Depositar</label>
           </div>
-          <div class="col-3 md:col-3" >
-            <i class="ni ni-fat-delete"></i><label style="font-size: 12px;font-weight: bold">Retirar</label>
+          <div class="col-3 md:col-3">
+            <button pButton pRipple type="button" icon="pi pi-minus-circle"  class="p-button-rounded p-button-secondary" (click)="mostraModalRetirar()"></button>
+            <label style="font-size: 11px;">Retirar</label>
           </div>
           <div class="col-3 md:col-3" >
-            <i class="ni ni-active-40" ></i><label style="font-size: 12px;font-weight: bold">Alterar</label>
+            <button pButton pRipple type="button" icon="pi pi-pencil"  class="p-button-rounded p-button-secondary" (click)="mostraModalAttuMeta()"></button>
+            <label style="font-size: 11px;">Alterar</label>
           </div>
 
           <div class="col-3 md:col-3">
-            <a href="#" (click)="deletarMeta()">
-              <i class="ni ni-fat-remove"></i>
-              <label style="font-size: 12px;font-weight: bold" >Excluir</label>
-            </a>
+            <button  pButton pRipple type="button" icon="pi pi-times-circle"  class="p-button-rounded p-button-secondary" (click)="deletarMeta()"></button>
+            <label style="font-size: 11px;">Excluir</label>
 
           </div>
 
